# hurve

./: .dockerignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  fly.toml  hurve.cabal
app/: Main.hs
app/Game/: Engine.hs  Types.hs
app/Lobby/: API.hs  Server.hs
app/Room/: Runtime.hs
app/Web/: SSE.hs  WS.hs
static/: app.css  index.html  room.html  room_game.html  room_waiting.html
